文件上传腾讯云

--- a/sky-server/src/main/resources/application-dev.yml
+++ b/sky-server/src/main/resources/application-dev.yml
@@ -6,3 +6,10 @@ sky:
     database: sky_take_out
     username: root
     password: 662535
+  qcloud:
+    regions:
+    secret-id:
+    secret-key:
+    bucket-name:
+    local-file-path:
+    file-path:
