--- a/pom.xml
+++ b/pom.xml
@@ -122,6 +122,11 @@
                 <artifactId>wechatpay-apache-httpclient</artifactId>
                 <version>0.4.8</version>
             </dependency>
+            <dependency>
+                <groupId>com.qcloud</groupId>
+                <artifactId>cos_api</artifactId>
+                <version>5.6.75</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 </project>
