--- a/sky-server/src/main/resources/application.yml
+++ b/sky-server/src/main/resources/application.yml
@@ -12,6 +12,10 @@ spring:
       url: jdbc:mysql://${sky.datasource.host}:${sky.datasource.port}/${sky.datasource.database}?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowPublicKeyRetrieval=true
       username: ${sky.datasource.username}
       password: ${sky.datasource.password}
+  servlet:
+    multipart:
+      max-file-size: 1024MB
+      max-request-size: 1024MB
 
 mybatis:
   #mapper配置文件
@@ -37,3 +41,12 @@ sky:
     admin-ttl: 7200000
     # 设置前端传递过来的令牌名称
     admin-token-name: token
+  qcloud:
+    regions: ${sky.qcloud.regions}
+    secret-id: ${sky.qcloud.secret-id}
+    secret-key: ${sky.qcloud.secret-key}
+    bucket-name: ${sky.qcloud.bucket-name}
+    filfile-pathePath: ${sky.qcloud.file-path}
+
+
+
