修改菜品和店铺营业转态设置

--- a/sky-server/src/main/resources/application.yml
+++ b/sky-server/src/main/resources/application.yml
@@ -2,6 +2,10 @@ server:
   port: 8080
 
 spring:
+  redis:
+    host: ${sky.redis.host}
+    port: ${sky.redis.port}
+    database: ${sky.redis.database}
   profiles:
     active: dev
   main:
