--- a/sky-server/src/main/resources/application-dev.yml
+++ b/sky-server/src/main/resources/application-dev.yml
@@ -11,5 +11,8 @@ sky:
     secret-id:
     secret-key:
     bucket-name:
-    local-file-path:
     file-path:
+  redis:
+    host: localhost
+    port: 6379
+    database: 15
